<resources>
    <string name="app_name">PROGETTO_TOSA</string>
    <string name="title_home">Home</string>
    <string name="title_stepwatch">Cronometro</string>
    <string name="title_bodybuilding">Bodybuilding</string>">
    <string name="title_cardio">Cardio</string>
    <string name="title_stretching">Stretching</string>
    <string name="title_corpolibero">Corpo Libero</string>
    <string name="title_workout">Workout</string>
    <string name="exercises_label">Lista di esercizi</string>
    <string name="exercises_list_description">
    Seleziona un esercizio dalla lista
</string>
    <string name="image_cover">Cover image</string>

    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="disable_dark_mode">Disable dark mode</string>
    <string name="desc_workout_image3">Anteprima allenamento 3</string>
    <string name="desc_workout_image2">Anteprima allenamento 2</string>
    <string name="desc_workout_image4">Anteprima allenamento 4</string>

    <string name="desc_workout_image">Anteprima allenamento 1</string>

    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string><!--queste parti sono il nome che mi compare sotto l'icona nel menu-->

    <string name="title_data">Your Data</string>
    <string name="fine">Fine!</string>
    <string name="imposta_tempo">Imposta tempo</string>
    <string name="ok">OK</string>
    <string name="annulla">Annulla</string>
    <string name="title_activity_login_with_email">LoginWithEmailActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_with_google">LoginWithGoogle</string>
    <string name="default_web_client_id">1041503427752-3eff7fjg9cmji1b8m4rtvsle30di8bn8.apps.googleusercontent.com</string>
</resources>