<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!-- Home (tab 1) -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.progetto_tosa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_auto_schedule"
            app:destination="@id/fragment_my_auto_schedule" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_workout"
            app:destination="@id/fragment_workout" />
        <action
            android:id="@+id/action_navigation_home_to_pt_schedule"
            app:destination="@id/navigation_ptSchedule" />
    </fragment>

    <!-- Workout (tab 2) con le azioni verso i 4 sotto‑fragment -->
    <fragment
        android:id="@+id/fragment_workout"
        android:name="com.example.progetto_tosa.ui.workout.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" >
        <action
            android:id="@+id/action_workout_to_bodybuilding"
            app:destination="@id/navigation_bodybuilding" />
        <action
            android:id="@+id/action_workout_to_cardio"
            app:destination="@id/navigation_cardio" />
        <action
            android:id="@+id/action_workout_to_corpolibero"
            app:destination="@id/navigation_corpolibero" />
        <action
            android:id="@+id/action_workout_to_stretching"
            app:destination="@id/navigation_stretching" />
        <action
            android:id="@+id/action_fragment_workout_to_fragment_my_auto_schedule"
            app:destination="@id/fragment_my_auto_schedule" />
    </fragment>

    <!-- Stepwatch (tab 3) -->
    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.progetto_tosa.ui.stepwatch.TimerFragment"
        android:label="Timer"
        tools:layout="@layout/fragment_timer" >
        <action
            android:id="@+id/action_timer_to_stepwatch"
            app:destination="@id/navigation_stepwatch" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stepwatch"
        android:name="com.example.progetto_tosa.ui.stepwatch.StepwatchFragment"
        android:label="Cronometro"
        tools:layout="@layout/fragment_stepwatch" />

    <!-- Account (tab 4) -->
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.progetto_tosa.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_account_to_UserData"
            app:destination="@id/navigation_UserData" />
        <action
            android:id="@+id/action_account_to_Settings"
            app:destination="@id/navigation_Settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_UserData"
        android:name="com.example.progetto_tosa.ui.account.InsertData"
        android:label="I miei dati"
        tools:layout="@layout/fragment_insert_data" />

    <fragment
        android:id="@+id/navigation_Settings"
        android:name="com.example.progetto_tosa.ui.account.SettingsFragment"
        android:label="IMPOSTAZIONI"
        tools:layout="@layout/fragment_settings" />

    <!-- Sotto‑fragment di Workout -->
    <fragment
        android:id="@+id/navigation_bodybuilding"
        android:name="com.example.progetto_tosa.ui.workout.BodybuildingFragment"
        android:label="@string/title_bodybuilding"
        tools:layout="@layout/fragment_bodybuilding" />

    <fragment
        android:id="@+id/navigation_cardio"
        android:name="com.example.progetto_tosa.ui.workout.CardioFragment"
        android:label="@string/title_cardio"
        tools:layout="@layout/fragment_cardio" />

    <fragment
        android:id="@+id/navigation_corpolibero"
        android:name="com.example.progetto_tosa.ui.workout.CorpoliberoFragment"
        android:label="@string/title_corpolibero"
        tools:layout="@layout/fragment_corpolibero" />

    <fragment
        android:id="@+id/navigation_stretching"
        android:name="com.example.progetto_tosa.ui.workout.StretchingFragment"
        android:label="@string/title_stretching"
        tools:layout="@layout/fragment_stretching" />

    <fragment
        android:id="@+id/fragment_my_auto_schedule"
        android:name="com.example.progetto_tosa.ui.home.MyAutoScheduleFragment"
        android:label="Le mie schede"
        tools:layout="@layout/fragment_my_auto_schedule" >
        <action
            android:id="@+id/action_fragment_my_auto_schedule_to_navigation_timer"
            app:destination="@id/navigation_timer" />
        <action
            android:id="@+id/action_fragment_my_auto_schedule_to_navigation_bodybuilding"
            app:destination="@id/navigation_bodybuilding" />
        <action
            android:id="@+id/action_fragment_my_auto_schedule_to_navigation_cardio"
            app:destination="@id/navigation_cardio" />
        <action
            android:id="@+id/action_fragment_my_auto_schedule_to_navigation_stretching"
            app:destination="@id/navigation_corpolibero" />
        <action
            android:id="@+id/action_fragment_my_auto_schedule_to_navigation_corpolibero"
            app:destination="@id/navigation_stretching" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ptSchedule"
        android:name="com.example.progetto_tosa.ui.home.PTscheduleFragment"
        android:label="Le schede del mio PT"
        tools:layout="@layout/fragment_pt_schedule" />

</navigation>
